fix: close four installation blockers in the IDEA plugin bridge
Codex review of 4dcdbd45 rejected installation. All four findings are addressed
with RED-first tests; the plugin is still NOT installed.

1. PluginConfig.load was unusable for any real registry.
   RED: loading a real configuration that contains target rows failed with
   "IOException: projectRoot must be declared before target rows", because the
   first pass called requireProjectRoot with a still-null projectRootValue.
   Fix: strict two-phase parsing. Phase 1 decodes UTF-8 strictly, validates the
   framing and collects scalars (socketPath, ledgerPath, projectRoot, uiTimeoutMs,
   secretFile), rejecting duplicate and unknown scalar keys. Phase 2 establishes
   the canonical, symlink-free project root and only then registers targets, so row
   order can no longer matter. Duplicate handles, wrong column counts, malformed
   UTF-8, missing projectRoot, non-regular or symlinked FILE targets and
   out-of-root targets are all rejected as configuration errors.

2. SHOW_TEST_RESULT had a false-success identity gap.
   The handle was treated as a tool window id and whichever single valid content
   happened to exist was accepted. Now a TEST_RESULT handle must bind BOTH the
   fixed result tool window and an exact content display name (four-column row).
   The new pure TestResultContentMatcher accepts only a valid content whose
   component belongs to the supported IntelliJ test-framework UI package and whose
   display name matches exactly; zero matches, same-name duplicates, ambiguous
   matches and same-name console/editor content all fail closed, and the "only
   content" fallback is gone. After activation the plugin verifies the SAME content
   object is still present, selected, visible and identity-preserving.

3. Single-frame enforcement was incomplete in both directions.
   RED: with a fake plugin server returning "valid frame + trailing bytes" (or a
   second complete frame) in one write, the service